--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "telegram-webnovel-epub-bot",
   "version": "1.0.0",
   "description": "Telegram bot to convert FreeWebNovel chapters into EPUB",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js",
+    "start": "node index.js",
     "postinstall": "npx playwright install chromium"
   },
   "engines": {
