--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "telegram-webnovel-epub-bot",
   "version": "1.0.0",
   "description": "Telegram bot to convert FreeWebNovel chapters into EPUB",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node bot.js",
     "postinstall": "npx playwright install chromium"
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "cheerio": "^1.0.0",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "epub-gen": "^0.1.0",
+    "express": "^4.22.1",
     "node-telegram-bot-api": "^0.63.0",
     "pg": "^8.16.3",
-    "playwright": "^1.40.0",
+    "playwright": "^1.57.0",
     "playwright-extra": "^4.3.6",
     "playwright-extra-plugin-stealth": "^0.0.1"
   }
